<resources>
    <string name="app_name">Libro</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="new_member">New member?</string>
    <string name="next">Next</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="cloud_on_the_top">cloud on the top</string>
    <string name="cloud_on_the_bottom">cloud on the bottom</string>
    <string name="picture">picture</string>
    <string name="fullcloud">fullcloud</string>
    <string name="logopic">logopic</string>
    <string name="libro">Libro</string>
    <string name="signup">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="strong_password">Strong password</string>
    <string name="already_member">Already a member?</string>
    <string name="my_library">My Library</string>
    <string name="completed">Completed</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="want_to_read">Want To Read</string>
    <string name="submit">Submit</string>
    <string name="book_list_name">Book List Name</string>
    <string name="book_list_namee">Book List Name</string>
    <string name="book_title">Book Title</string>
    <string name="author_name">Author Name</string>
    <string name="add_list">Add list</string>
    <string name="add_category">Add Category</string>
    <string name="add_your_list">Add Your List</string>
    <string name="list_name">List Name</string>
    <string name="list_title">List Title</string>
    <string name="adding_a_book">Adding a book</string>
    <string name="delete_button">delete button</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="user_name">User Name</string>
    <string name="email_placeholder">Email: </string>
    <string name="creation_date_placeholder">Account Created: </string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="change_email">change email</string>

</resources>