<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDD6C8"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/top_cloud"
        android:layout_width="308dp"
        android:layout_height="99dp"
        android:layout_marginEnd="103dp"
        android:contentDescription="@string/cloud_on_the_top"
        android:scaleType="fitXY"
        android:src="@drawable/topcloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/bot_cloud"
        android:layout_width="308dp"
        android:layout_height="99dp"
        android:layout_marginStart="103dp"
        android:contentDescription="@string/cloud_on_the_bottom"
        android:scaleType="fitXY"
        android:src="@drawable/bottcloud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_cloud"/>

    <TextView
        android:id="@+id/lets_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/let_s_get_started"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"/>
   <Button
        android:id="@+id/login"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#C67C4E"
       android:gravity="center"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lets_get_started"/>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#C67C4E"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"/>
</androidx.constraintlayout.widget.ConstraintLayout>