<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDD6C8"
    tools:context=".UserProfileActivity">

    <ImageView
        android:id="@+id/top_cloud"
        android:layout_width="308dp"
        android:layout_height="99dp"
        android:layout_marginEnd="103dp"
        android:contentDescription="@string/cloud_on_the_top"
        android:scaleType="fitXY"
        android:src="@drawable/topcloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bot_cloud"
        android:layout_width="308dp"
        android:layout_height="99dp"
        android:layout_marginStart="103dp"
        android:contentDescription="@string/cloud_on_the_bottom"
        android:scaleType="fitXY"
        android:src="@drawable/bottcloud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <FrameLayout
        android:id="@+id/UserPhotoFrame"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="127dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/circular_background">

        <ImageView
            android:id="@+id/UserPhoto"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/user_circle_single"
            android:clipToOutline="true"
            android:background="@drawable/circular_background"
            android:outlineProvider="background" />


        <ImageButton
            android:id="@+id/uploadPhoto"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="65dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/circular_background"
            android:src="@drawable/baseline_auto_fix_high_24" />


    </FrameLayout>

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/email_placeholder"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <TextView
        android:id="@+id/userCreationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/creation_date_placeholder"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmail" />


    <Button
        android:id="@+id/logout_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="540dp"
        android:backgroundTint="@color/dark_brown"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dltacc_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/dark_brown"
        android:gravity="center"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_button" />

    <ImageButton
        android:id="@+id/changeEmailButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/circular_background"
        android:src="@drawable/baseline_auto_fix_high_24"
        android:contentDescription="@string/change_email"
        app:layout_constraintStart_toEndOf="@id/userEmail"
        app:layout_constraintTop_toTopOf="@id/userEmail"
        app:layout_constraintBottom_toBottomOf="@id/userEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>
