<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDD6C8"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/top_cloud"
        android:layout_width="308dp"
        android:layout_height="99dp"
        android:layout_marginEnd="103dp"
        android:contentDescription="@string/picture"
        android:scaleType="fitXY"
        android:src="@drawable/topcloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bot_cloud"
        android:layout_width="308dp"
        android:layout_height="99dp"
        android:layout_marginStart="103dp"
        android:contentDescription="@string/picture"
        android:scaleType="fitXY"
        android:src="@drawable/bottcloud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:layout_marginTop="61dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_cloud" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="61dp"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:endIconDrawable="@drawable/mail"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="253dp"
        android:layout_marginTop="21dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"

        android:textColor="@color/dark_brown"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        tools:ignore="TouchTargetSizeCheck" />


    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:layout_marginStart="53dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="Remember me"

        android:textColor="@color/dark_brown"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        tools:ignore="TouchTargetSizeCheck"  />

    <Button
        android:id="@+id/next_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="130dp"
        android:backgroundTint="@color/dark_brown"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <TextView
        android:id="@+id/new_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:text="@string/new_member"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_button" />


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up_now"
        android:textColor="@color/dark_brown"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/new_member"
        app:layout_constraintTop_toBottomOf="@+id/next_button"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>