<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fullcloud"
        android:scaleType="fitCenter"
        android:src="@drawable/fullcloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/AppImageIcon"
        android:layout_width="183dp"
        android:layout_height="183dp"
        android:layout_marginTop="162dp"
        android:contentDescription="@string/logopic"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topImage"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/LibroImg"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/libro"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppImageIcon"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>