<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDD6C8"
    tools:context=".LibraryActivity">

    <TextView
        android:id="@+id/mylibrary"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="116dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/my_library"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/search_02"
        android:hint="Search"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mylibrary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/lists"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="80dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/addlist"
        app:layout_constraintTop_toBottomOf="@+id/searchEt"
        tools:listitem="@layout/row_list" />

    <Button
        android:id="@+id/addlist"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_brown"
        android:gravity="center"
        android:text="@string/add_list"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/Addbook"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/adding_a_book"
        android:src="@drawable/baseline_bookmark_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circular_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/UserPhoto1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/circular_background"
            android:clipToOutline="true"
            android:contentDescription="Add Profile Photo"
            android:outlineProvider="background"
            android:src="@drawable/user_circle_single_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>